Fix overflow in projects

--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@ body {
 }
 
 .project p {
+    overflow: hidden;
     font-size: 1rem;
     color: #0f0f0f;
 }
